version 0.9.8 -- UNRELEASED
    handler changes
	sys:
	 . Only run mdadm if RAID devices actually exist (Closes: #572450)
	dup:
	 . Now default to use --full-if-older-than; see the new "increments"
	   option to opt-out or tweak the default (30D) delay between full
	   backups. Thanks a lot to Olivier Berger (Closes: #535996)
	 . Use duplicity's --extra-clean option to get rid of unnecessary old
	   cache files when cleaning up. This is enabled when using duplicity
	   0.6.01 or newer, that depends on local caching (Closes: #572721)
	 . Ignore anything but digits and "." when comparing versions
	   (Closes: #578987)
	 . Put archive directory (cache) into /var/cache/backupninja/duplicity
	   rather than the default /root/.cache/duplicity, unless the user
	   has specified it (Closes: 580213)
	 . Better example.dup documentation. Thanks, Alster!
	 . Added ftp_password option to securely transmit the FTP password
	   from backupninja to duplicity.
    doc changes
	manpage:
	 . Fix typo in manpage (Closes: #583778)

version 0.9.7 -- January 27, 2010
    backupninja changes
	 . fix bug in reportspace, thanks Dan Garthwaite
	 . do not assume English locale when using date (Closes: #465837)
	 . add 'when = manual' option, that can be used in the global config
	   file or in a given backup action file. Thanks Tuomas Jormola for the
	   preliminary patch (Closes: #511299)
	 . new reportinfo option: when set, messages sent by handlers with
	   "info" are included in the report e-mail (closes #563734)
	 . reportspace: skip non-directories and places that don't exist on the
	   local filesystem (Closes: #536049)
	 . set BACKUPNINJA_DEBUG when invoked with -d (Closes: #537266)
    lib changes
	easydialog:
	 . Allow form fields input to grow up to 100 chars (Closes: #562249)
    handler changes
	ldap:
	 . Use gzip's --rsyncable option.
	 . Use bash pipefail option when needed so that failed dumps are
	   reported as such.
	maildir:
	 . fix location of deleted_on file